<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

 
    <!-- 登录页 -->

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical" >

        <ImageView android:id="@+id/img_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/login_logo"
            android:layout_marginTop="30dp"
           android:padding="20dp"
           android:contentDescription="@string/zhengxun"/>

       

         
            <!-- 用户名登录页 -->

            <LinearLayout
                android:id="@+id/layout_user_name"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    style="@style/style_layout_login_input"
                    android:background="@drawable/login_inputbox" >

                    <TextView
                        style="@style/style_text_login"
                        android:text="@string/user_name" />

                    <EditText
                        android:id="@+id/edit_phone_no1"
                        style="@style/style_edit_login_input"
                        android:hint="@string/hint_username" />
                </LinearLayout>

                <LinearLayout
                    style="@style/style_layout_login_input"
                    android:background="@drawable/login_inputbox" >

                    <TextView
                        style="@style/style_text_login"
                        android:text="@string/password" />

                    <EditText
                        android:id="@+id/edit_password1"
                        style="@style/style_edit_login_input"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:maxLength="15" />
                </LinearLayout>

                <LinearLayout android:id="@+id/remeber_layout"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dip"
                    android:layout_marginLeft="0dip">
                <CheckBox
                    android:id="@+id/cb_remember_username"
                    style="@style/style_remember_username_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:paddingLeft="30dip"
                    android:text="@string/remember_username"
                    android:textSize="14sp" />
                
                   <CheckBox
                    android:id="@+id/cb_remember_password"
                    style="@style/style_remember_username_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dip"
                    android:paddingLeft="30dip"
                    android:text="@string/remember_password"
                    android:textSize="14sp" />
               </LinearLayout>
                <Button
                    android:id="@+id/btn_login_user_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dip"
                    android:layout_marginRight="12dip"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/selector_confirm_btn"
                    android:text="@string/login" 
                    android:textColor="@color/white"
                    android:textSize="16sp"/>
            </LinearLayout>
           
        
    </LinearLayout>   
  
</RelativeLayout>