<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:gravity="center_vertical"
    android:background="@drawable/foot_bg">
    <ImageView 
        android:id="@+id/img_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/foot_menu_sel"/>
	<LinearLayout 
	    android:id="@+id/ll_foot_menubar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">
	    <ImageView
	    	android:id="@+id/img_daily_work"
	    	android:layout_weight="1"
	     	android:layout_width="0.0dip"
	    	android:layout_height="fill_parent"
	     	android:layout_gravity="center"
	     	android:paddingTop="10dip"
	     	android:src="@drawable/foot_menu_daily_work"
	     	android:contentDescription="@string/daily_work"
	     	android:tag="0"/>
	    <ImageView
	    	android:id="@+id/img_sell_assistant"
	    	android:layout_weight="1"
	     	android:layout_width="0.0dip"
	    	android:layout_height="fill_parent"
	     	android:layout_gravity="center"
	     	android:paddingTop="10dip"
	     	android:src="@drawable/foot_menu_sell_assistant"
	     	android:contentDescription="@string/sell_assistant"
	     	android:tag="1"/>
	   
	    <ImageView
	    	android:id="@+id/img_personal_center"
	    	android:layout_weight="1"
	     	android:layout_width="0.0dip"
	    	android:layout_height="fill_parent"
	     	android:layout_gravity="center"
	     	android:paddingTop="10dip"
	     	android:src="@drawable/foot_menu_personal"
	     	android:contentDescription="@string/personal_center"
	     	android:tag="2"/>
	    <ImageView
	    	android:id="@+id/img_more"
	    	android:layout_weight="1"
	     	android:layout_width="0.0dip"
	    	android:layout_height="fill_parent"
	     	android:layout_gravity="center"
	     	android:paddingTop="10dip"
	     	android:src="@drawable/foot_menu_more"
	     	android:contentDescription="@string/more"
	     	android:tag="3"/>
	</LinearLayout>
</FrameLayout>