<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:layout_height="wrap_content"
 android:layout_width="fill_parent"
 android:orientation="vertical">
    <RelativeLayout     android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@drawable/title_bg">
    <Button android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp"
        android:textColor="@color/white"
        android:background="@drawable/selector_back_bg"/>
    <TextView android:id="@+id/txt_title"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/zhengxun"/>

    <Button android:id="@+id/btn_right"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/select"
        android:textColor="@color/white"
        android:layout_margin="5dp"
        android:visibility="gone"
        android:background="@drawable/selector_btn_right_bg"/>
    </RelativeLayout>
    <include layout="@layout/date_picker_layout"       
        android:visibility="gone"/>
</LinearLayout>
