<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
     layout="@layout/header_layout" />

    <TextView
        android:id="@+id/tv_text_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/text_summary" />

    <EditText
        android:id="@+id/et_text_summary"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:gravity="top"
        android:layout_marginRight="20dp"
        android:maxLength="200"
        android:hint="@string/inputing" />

    <TextView
        android:id="@+id/tv_audio_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/audio_summary" />

    <Button
        android:id="@+id/btn_audio_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/selector_audio" />
    
        <RelativeLayout
                    android:id="@+id/rl_audio_del"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     android:visibility="gone">

                    <!--
                       <ImageView
                    android:id="@+id/img_abnormal_audio"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btn_abnormal_audio"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/abnormal_remark_label"
                    android:background="@drawable/chatto_bg" />
                    -->

                    <TextView
                        android:id="@+id/tv_summary_audio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/chatto_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:gravity="center_horizontal"
                        android:lineSpacingExtra="2dp"
                        android:minHeight="50dp"
                        android:textColor="#ff000000"
                        android:textSize="15sp" />

                    

                    <TextView
                        android:id="@+id/tv_summary_audio_del"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_summary_audio"
                        android:padding="5dp"
                        android:drawableLeft="@drawable/selector_close"
                        android:drawablePadding="2dp"
                        android:text="@string/delete_audio" />
                </RelativeLayout>

</LinearLayout>
     <!-- 录音显示UI层-->
   <include layout="@layout/audio_layout"/>
</RelativeLayout>