<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pic_des"
        android:orientation="vertical" >

        <include layout="@layout/header_layout" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/txt_worksheet_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dip"
                android:padding="5dp"
                android:text="@string/worksheet_area" />

            <TextView
                android:id="@+id/txt_time_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/txt_worksheet_label"
                android:padding="5dp"
                android:text="@string/daily_work_period"
                android:textColor="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <TextView
                android:id="@+id/txt_select_shop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/select_shop" />

            <RelativeLayout
                android:id="@+id/layout_pop_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_toRightOf="@id/txt_select_shop"
                android:background="@drawable/login_inputbox"
                android:paddingLeft="5dp" >

                <TextView
                    android:id="@+id/tv_search_topic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/zhengxun"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/img_down_arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:src="@drawable/search_down_arrow" />
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/worksheet_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/rl_sigin_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/img_sigin_ico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/signin"
                    android:src="@drawable/visit_list_ico" />

                <TextView
                    android:id="@+id/txt_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/img_sigin_ico"
                    android:text="@string/signin" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/signin"
                    android:padding="8dp"
                    android:src="@drawable/selector_arrow"
                    android:tag="0" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_sigout_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:padding="5dp" >

                <ImageView
                    android:id="@+id/img_sigout_ico"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/signout"
                    android:src="@drawable/visit_list_ico" />

                <TextView
                    android:id="@+id/txt_signout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="8dip"
                    android:layout_toRightOf="@id/img_sigout_ico"
                    android:text="@string/signout" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/signout"
                    android:padding="8dp"
                    android:src="@drawable/selector_arrow"
                    android:tag="1" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_company_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
         android:background="@color/white"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/rl_search_area"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/label_bg"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <EditText
                android:id="@+id/et_search_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/login_inputbox"
                android:hint="@string/search_hint"
                android:maxLength="10"
                android:singleLine="true"
                android:text=""
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:layout_toRightOf="@id/et_search_area"
                android:src="@drawable/selector_select" />
        </RelativeLayout>

           <TextView
            android:id="@+id/tv_search_no_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:visibility="gone" />
           
        <ListView
            android:id="@+id/lst_company"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:divider="@drawable/splitor"
        android:layout_margin="5dp"
            />
    </LinearLayout>

</RelativeLayout>